# window-enumerator-formatter

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: clean-old-runs-d.yml  clean-old-runs-h.yml  crate-publish-s.yml  crate-publish.yml  docker-debug.yml  docker-publish.yml  ghcr-clean-old.yml  ghcr-publish.yml  next-release.yml  window-release.yml
docs/: ask.for.ai.md  托管管理-gh.md  版本管理.md
examples/: advanced_config.rs  basic_usage.rs  custom_templates.rs  multiple_formats.rs  with_enumerator.rs
scripts/: README.md  generate-changelog.sh  local-build-scratch-in-docker.sh  pre.ai.sh
src/: error.rs  formatter.rs  lib.rs  models.rs
