[package]
name = "window-enumerator-formatter"
version = "0.1.0"
edition = "2021"
description = "A powerful formatting library for window information with multiple output formats (JSON, YAML, CSV, Table) and template support"
authors = ["YeMiancheng <ymc.github@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ymc-github/window-enumerator-formatter"
keywords = ["windows", "formatter"]
categories = ["development-tools", "text-processing", "command-line-utilities"]
readme = "README.md"
documentation = "https://docs.rs/window-enumerator-formatter"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
window-enumerator = { version = "0.4", optional = true }

[features]
default = []
window-enumerator = ["dep:window-enumerator"]
all = ["window-enumerator"]

[dev-dependencies]
window-enumerator = { version = "0.4", features = ["windows"] }

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]